--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+
+spring.datasource.driver=com.mysql.cj.jdbc.Driver
+spring.datasource.jdbc-url=jdbc:mysql://localhost:3306/goodshop
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.mapper-location=classpath:/mapper/**/*.xml
