--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,11 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
 spring.datasource.driver=com.mysql.cj.jdbc.Driver
-spring.datasource.jdbc-url=jdbc:mysql://localhost:3306/goodshop
+spring.datasource.url=jdbc:mysql://localhost:3306/goodshop2
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.mapper-location=classpath:/mapper/**/*.xml
+
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
