--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -7,6 +7,6 @@ spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.mapper-location=classpath:/mapper/**/*.xml
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
